--- a/src/app/books-list/books-list.component.html
+++ b/src/app/books-list/books-list.component.html
@@ -1,3 +1,5 @@
+<h3>Books to Read</h3>
+
 <ul>
   <li *ngFor="let book of books">
     {{ book.title }},
@@ -5,3 +7,9 @@
     {{ book.year }}
   </li>
 </ul>
+
+<label>Title <input [(ngModel)]="newTitle" type="text"></label>
+<label>Author <input [(ngModel)]="newAuthor" type="text"></label>
+<label>Year <input [(ngModel)]="newYear" type="text"></label>
+
+<button (click)="addBook()">Add</button>
